[gd_scene load_steps=2 format=3 uid="uid://b1ftj4p0hkojy"]

[ext_resource type="Script" path="res://debug_slider.gd" id="1_7q0xe"]

[node name="DebugSlider" type="MarginContainer"]
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_7q0xe")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="HSlider" type="HSlider" parent="VBoxContainer"]
layout_mode = 2
step = 0.1

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "dsafadsf"

[node name="Label2" type="Label" parent="VBoxContainer"]
layout_mode = 2

[node name="LineEdit" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2

[connection signal="drag_ended" from="VBoxContainer/HSlider" to="." method="_on_h_slider_drag_ended"]
[connection signal="text_submitted" from="VBoxContainer/LineEdit" to="." method="_on_line_edit_text_submitted"]
